feat: make client work

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,48 +1,77 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    font-family: "Inter", system-ui, sans-serif;
-    color: white;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: "Inter", system-ui, sans-serif;
+  color: white;
 }
 
 body {
-    height: 100svh;
-    width: 100svw;
-    background: #0c0c20;
+  height: 100svh;
+  width: 100svw;
+  background: #0c0c20;
 }
+
 main {
-    background: rgba(255, 255, 255, 0.2);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 0px 36px 76px -16px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(100px);
-    /* Note: backdrop-filter has minimal browser support */
-    padding: 30px;
-    max-width: 800px;
-    min-width: 400px;
-    margin: 90px auto;
-    border-radius: 30px;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 36px 76px -16px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(100px);
+  /* Note: backdrop-filter has minimal browser support */
+  padding: 30px;
+  max-width: 800px;
+  min-width: 400px;
+  margin: 90px auto;
+  border-radius: 30px;
 }
+
 .blur {
-    width: 400px;
-    height: 200px;
-    position: fixed;
-    background: conic-gradient(from 23.12deg at 50% 50%, #5200FF 0deg, rgba(20, 0, 255) 75deg, #0075FF 183.75deg, rgba(9, 112, 255, 0.6) 285deg, #5200FF 360deg);
-    filter: blur(121px) brightness(160%) saturate(1.4);
+  width: 400px;
+  height: 200px;
+  position: fixed;
+  background: conic-gradient(from 23.12deg at 50% 50%,
+      #5200ff 0deg,
+      rgba(20, 0, 255) 75deg,
+      #0075ff 183.75deg,
+      rgba(9, 112, 255, 0.6) 285deg,
+      #5200ff 360deg);
+  filter: blur(121px) brightness(160%) saturate(1.4);
+}
+
+.flex {
+  display: flex;
+  align-items: center;
 }
 
 h1 {
-    font-size: clamp(40px, 5vw, 50px);
-    font-weight: 700;
+  font-size: clamp(40px, 5vw, 50px);
+  font-weight: 700;
+}
+
+select {
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  height: fit-content;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+select:hover {
+  box-shadow: 0 5px 4px rgba(0,0,0,0.2);
+  translate: 0px -1px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 train-departure {
-    display: flex;
-    align-items: center;
-    margin: 4px 0;
-    justify-content: space-between;
-    background: rgba(0, 0, 0, 0.05);
-    border: 1px solid rgba(255, 255, 255, 0.15);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
-    padding: 20px;
+  display: flex;
+  align-items: center;
+  margin: 4px 0;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  border-radius: 20px;
+  padding: 20px;
 }
