--- a/client/css/style.css
+++ b/client/css/style.css
@@ -41,6 +41,7 @@ main {
       rgba(9, 112, 255, 0.6) 285deg,
       #5200ff 360deg);
   filter: blur(121px) brightness(160%) saturate(1.4);
+  z-index: -1;
 }
 
 .flex {
