--- a/client/css/style.css
+++ b/client/css/style.css
@@ -42,6 +42,7 @@ main {
       #5200ff 360deg);
   filter: blur(121px) brightness(160%) saturate(1.4);
   z-index: -1;
+  pointer-events: none;
 }
 
 .flex {
